[package]
name = "nolimit-solana-example"
version = "0.1.0"
edition = "2021"
description = "Example usage of noLimit Solana SDK in Rust"
authors = ["noLimit Foundation <dev@nolimit.foundation>"]

[dependencies]
nolimit-solana = { path = "../../programs/nolimit-solana" }
solana-sdk = "1.18"
solana-client = "1.18"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
bs58 = "0.5"
anyhow = "1.0"

[[bin]]
name = "chat"
path = "src/chat.rs"

[[bin]]
name = "swap"
path = "src/swap.rs"

